# PyMARE

./: .codecov.yml  .gitattributes  .gitignore  .readthedocs.yml  .zenodo.json  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pypi_description.md  pyproject.toml  setup.cfg  setup.py
.circleci/: artifact_path  config.yml
.github/workflows/: testing.yml
docs/: Makefile  about.rst  api.rst  conf.py  contents.rst  index.rst  installation.rst  links.rst  references.bib  requirements-dev.txt
docs/_static/: nimare.css
docs/_templates/: function.rst
docs/sphinxext/: github_link.py
examples/01_basic_io/: README.txt  plot_create_dataset.py
examples/02_meta-analysis/: README.txt  plot_compare_mega_and_meta-analysis.py  plot_meta-analysis_walkthrough.py  plot_run_meta-analysis.py
pymare/: __init__.py  _version.py  core.py  estimators.py  info.py  results.py  stats.py  utils.py
pymare/datasets/: __init__.py  metadat.py
pymare/effectsize/: __init__.py  base.py  expressions.json  expressions.py
pymare/effectsizes/: __init__.py  base.py  expressions.json  expressions.py
pymare/estimators/: __init__.py  combination.py  estimators.py  stan.py
pymare/resources/datasets/: michael2013.json  michael2013.tsv
pymare/tests/: conftest.py  test_combination_tests.py  test_core.py  test_datasets.py  test_effect_sizes.py  test_effectsize_base.py  test_effectsize_expressions.py  test_estimators.py  test_expressions.py  test_results.py  test_stan_estimators.py  test_stats.py  test_utils.py
pymeta/: __init__.py  base.py  estimators.py  likelihoods.py  results.py
tests/: conftest.py  test_core.py  test_effect_sizes.py  test_estimators.py  test_expressions.py  test_meta_regression.py  test_stats.py
