[build-system]
requires = ["setuptools==68.2.2", "wheel"]

[tool.black]
line-length = 99
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | _build
    | build
    | dist
  )/
  | versioneer.py
  | pymare/_version.py
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
