[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = pymare/_version.py
versionfile_build = pymare/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
exclude=*build/,tests
putty-ignore =
    */__init__.py : +F401
ignore = E126,E402
