[metadata]
url = https://github.com/neurostuff/PyMARE
license = MIT
author = PyMARE developers
author_email = tsalo006@fiu.edu
maintainer = Taylor Salo
maintainer_email = tsalo006@fiu.edu
description = PyMARE: Python Meta-Analysis & Regression Engine
description-file = README.md
long_description =
    PyMARE: Python Meta-Analysis & Regression Engine
    ================================================
    A Python library for mixed-effects meta-regression (including meta-analysis).

    License
    =======
    `PYMARE` is licensed under the terms of the MIT license. See the file
    'LICENSE' for information on the history of this software, terms & conditions
    for usage, and a DISCLAIMER OF ALL WARRANTIES.

    All trademarks referenced herein are property of their respective holders.

    Copyright (c) 2019--, PyMARE developers
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
python_requires = >= 3.6
install_requires =
    numpy>=1.8.0
    pandas
    scipy
    sympy
    wrapt
packages = find:
include_package_data = False

[options.extras_require]
doc =
    m2r
    matplotlib
    mistune<2  # just temporary until m2r addresses this issue
    numpydoc
    pillow
    recommonmark
    seaborn
    sphinx>=3.5
    sphinx-argparse
    sphinx-copybutton
    sphinx_gallery==0.10.1
    sphinx_rtd_theme
    sphinxcontrib-bibtex
tests =
    codecov
    coverage
    coveralls
    flake8
    flake8-black
    flake8-docstrings
    flake8-isort
    pytest
    pytest-cov
stan =
    pystan
    arviz
all =
    %(doc)s
    %(tests)s

[options.package_data]
* =
    tests/data/*
    resources/*
    resources/datasets/*
    effectsize/*.json

[versioneer]
VCS = git
style = pep440
versionfile_source = pymare/_version.py
versionfile_build = pymare/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
exclude=*build/,_version.py
putty-ignore =
    */__init__.py : +F401
ignore = E203,E402,E722,W503
docstring-convention = numpy
